fix white space bottom of page

--- a/ui/css/article-2019.css
+++ b/ui/css/article-2019.css
@@ -97,6 +97,10 @@ display: inline-block;
 
 }
 
+div[id$='-holder'] {
+display:none;
+}
+
 
 
     /* BREAKPOINT: 600px // Increase article headline size */
